# pymol-psico

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README  README.md  environment-max.yml  environment-min.yml  environment.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yml
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
psico/: __init__.py  aaindex.py  aggrescanning.py  conservation.py  creating.py  editing.py  electrostatics.py  exporting.py  fasta.py  fitting.py  fullinit.py  geometry.py  guitweak.py  helping.py  importing.py  load_mtz_cctbx.py  matplotlib_fix.py  mcsalign.py  minimizing.py  modelling.py  moe.py  morpheasy.py  morphing.py  moving.py  msms.py  mutate.py  nma.py  numeric.py  orientation.py  plotting.py  prolif.py  querying.py  selecting.py  seqalign.py  setting.py  snp.py  versioning.py  viewing.py  wizards.py  xtal.py
tests/: README.md  test_aaindex.py  test_aggrescanning.py  test_conservation.py  test_creating.py  test_editing.py  test_electrostatics.py  test_exporting.py  test_fasta.py  test_fitting.py  test_geometry.py  test_helping.py  test_importing.py  test_load_mtz_cctbx.py  test_mcsalign.py  test_minimizing.py  test_modelling.py  test_moe.py  test_morphing.py  test_moving.py  test_msms.py  test_nma.py  test_numeric.py  test_orientation.py  test_plotting.py  test_prolif.py  test_querying.py  test_selecting.py  test_seqalign.py  test_setting.py  test_versioning.py  test_viewing.py  test_wizards.py  test_xtal.py
tests/data/: 1ubqA-1hezE.fatcat  4ins-frag.moe  5e5z_phases.mtz  ala-cys-asp.gro  ala-traj-1.dcd  ala-traj-2.dcd  consurf_summary-5NVGA.txt
tests/data/aaindex/: aaindex1
