[project]
name = "psico"
description = "Pymol ScrIpts COllection"
authors = [
    {name = "Thomas Holder"},
    {name = "Steffen Schmidt"},
]
license = {text = "BSD-2-Clause"}
requires-python = ">=3.7"
dependencies = [
    "pymol",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/speleo3/pymol-psico"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]
extra = [
    "biopython",
    "csb",
    "epam-indigo",
    # "openbabel",
    "prody",
    "rdkit",
]

[tool.setuptools.dynamic]
version = {attr = "psico.__version__"}

[tool.yapf]
based_on_style = "pep8"
allow_split_before_dict_value = false

[tool.autopep8]
select = [
    "E101", # indentation contains mixed spaces and tabs
    "E203", # Whitespace before ",", ";", or ":"
    "E22",  # Fix extraneous whitespace around keywords
    "E231", # Missing whitespace after ",", ";", or ":"
    "E241", # Multiple spaces after ','
    "E261", # At least two spaces before inline comment
    "E301", # Add missing blank line
    "E302", # Expected 2 blank lines
    "E305", # Expected 2 blank lines after end of function or class
    "E502", # Remove extraneous escape of newline
    "E701", # multiple statements on one line (colon)
    "W",
    "W291", # trailing whitespace (does not work)
]

[tool.ruff]
ignore = [
    "E401",     # Multiple imports on one line
    "E501",     # Line too long
    "E731",     # lambda-assignment
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "exe: test requires third-party executable",
    "web: test requires internet access",
]

# vi:sw=4
