[project]
name = "psico"
description = "Pymol ScrIpts COllection"
authors = [
    {name = "Thomas Holder"},
    {name = "Steffen Schmidt"},
]
license = {text = "BSD-2-Clause"}
requires-python = ">=3.7"
dependencies = [
    "pymol",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/speleo3/pymol-psico"

[project.optional-dependencies]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "ruff",
]
extra = [
    "biopython",
    "csb",
    "epam-indigo",
    # "openbabel",
    "prody",
    "rdkit",
]

[tool.setuptools.packages.find]
include = ["psico"]

[tool.setuptools.dynamic]
version = {attr = "psico.__version__"}

[tool.yapf]
based_on_style = "pep8"
allow_split_before_dict_value = false

[tool.autopep8]
select = [
    "E101", # indentation contains mixed spaces and tabs
    "E203", # Whitespace before ",", ";", or ":"
    "E22",  # Fix extraneous whitespace around keywords
    "E231", # Missing whitespace after ",", ";", or ":"
    "E241", # Multiple spaces after ','
    "E261", # At least two spaces before inline comment
    "E301", # Add missing blank line
    "E302", # Expected 2 blank lines
    "E305", # Expected 2 blank lines after end of function or class
    "E502", # Remove extraneous escape of newline
    "E701", # multiple statements on one line (colon)
    "W",
    "W291", # trailing whitespace (does not work)
]

[tool.ruff]
extend-select = ["W", "B", "Q003"]
ignore = [
    "E401",     # Multiple imports on one line
    "E501",     # Line too long
    "E731",     # lambda-assignment
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "exe: test requires third-party executable",
    "web: test requires internet access",
    "rdkit: test requires RDKit",
    "openbabel: test requires Open Babel",
]
filterwarnings = [
    'ignore:.*xdrlib.*:DeprecationWarning:mdtraj.formats',
    'ignore:.*pkg_resources.*:DeprecationWarning:mdtraj.geometry.order',
    'ignore:.*declare_namespace.*:DeprecationWarning:pkg_resources',
    'ignore:.*setDaemon.*:DeprecationWarning:pymol.licensing',
]

[tool.coverage.run]
source = ["psico"]

[tool.mypy]
files = [
    "psico",
    "tests",
]
ignore_missing_imports = true
explicit_package_bases = true

# vi:sw=4
